# context-matters

./: .fmm.db  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LESSONS.md  PROJECT.md  Procfile.dev  README.md  TLDR.md  justfile  release-please-config.json  tools.toml
crates/cm-capabilities/: Cargo.toml
crates/cm-capabilities/benches/: README.md  aggregation_bench.rs  format_views_bench.rs  normalise_bm25_bench.rs  smart_snippet_bench.rs
crates/cm-capabilities/src/: browse.rs  constants.rs  deposit.rs  error.rs  export.rs  forget.rs  get.rs  lib.rs  projection.rs  recall.rs  scope.rs  search.rs  stats.rs  store.rs  telemetry.rs  update.rs  validation.rs
crates/cm-capabilities/src/projection/: aggregation.rs  aggregation_tests.rs  browse_view.rs  get_view.rs  mod.rs  recall_view.rs  recall_view_tests.rs  search_view.rs  stats_view.rs  text.rs  text_tests.rs  web_view.rs  write_ack.rs
crates/cm-capabilities/src/projection/aggregation/: dedup.rs  drill_down.rs  formatting.rs  histogram.rs
crates/cm-capabilities/src/recall/: metrics.rs  routing.rs  types.rs
crates/cm-capabilities/src/scope/: chain.rs  resolution.rs  segments.rs  types.rs
crates/cm-capabilities/tests/: browse_format_tests.rs  browse_scope_tests.rs  browse_tests.rs  deposit_tests.rs  export_scope_tests.rs  get_format_tests.rs  get_tests.rs  logging_tests.rs  metadata_parity_tests.rs  recall_filtering_tests.rs  recall_format_tests.rs  recall_limits_tests.rs  recall_ranking_tests.rs  recall_routing_tests.rs  recall_scope_order_tests.rs  recall_score_tests.rs  recall_shadow_tests.rs  recall_tests.rs  recall_tier_tests.rs  recall_trace_tests.rs  scope_selector_tests.rs  search_tests.rs  stats_format_tests.rs  stats_tests.rs  store_tests.rs  update_tests.rs  web_view_tests.rs  write_ack_format_tests.rs
crates/cm-capabilities/tests/browse/: filters.rs  mod.rs  pagination.rs  responses.rs  sort.rs  superseded.rs  support.rs
crates/cm-capabilities/tests/browse_scope/: auto_resolution.rs  cwd_inferred_resolution.rs  explicit.rs  filters_and_pagination.rs  mod.rs  support.rs
crates/cm-capabilities/tests/common/: mod.rs
crates/cm-capabilities/tests/recall_format/: behavior.rs  fixtures.rs  golden.rs  mod.rs  support.rs
crates/cm-capabilities/tests/snapshots/: browse_view_session_log.txt  get_view_all_found.txt  get_view_all_missing.txt  get_view_multiline_body.txt  get_view_partial_missing.txt  recall_view_browse_fallback.txt  recall_view_dedup.txt  recall_view_empty.txt  recall_view_rels.txt  recall_view_search.txt  recall_view_search_prefix_tier.txt  recall_view_search_split_or_tier.txt  stats_view.txt  write_ack_deposit_ids.txt  write_ack_deposit_summary.txt  write_ack_forget_errors.txt  write_ack_forget_happy.txt  write_ack_store.txt  write_ack_store_supersede.txt  write_ack_update.txt
crates/cm-cli/: Cargo.toml  build.rs
crates/cm-cli/src/: lib.rs  main.rs  shared.rs  tool_contracts.rs  tool_docs.rs  tool_examples.rs
crates/cm-cli/src/cli/: admin.rs  browse.rs  cli_def.rs  colors.rs  deposit.rs  errors.rs  export.rs  forget.rs  generated_help.rs  get.rs  help_text.rs  mod.rs  recall.rs  scope.rs  search.rs  stats.rs  store.rs  update.rs
crates/cm-cli/src/mcp/: generated_instructions.rs  generated_schema.rs  instructions.rs  mod.rs  panic_guard.rs  protocol.rs  response.rs  schema.rs  server.rs  tools.rs  transport.rs
crates/cm-cli/templates/: SKILL.md
crates/cm-cli/tests/: adapter_error_parity.rs  browse_scope_tests.rs  cli_flags.rs  cli_integration.rs  codex_schema_safety.rs  config_startup_test.rs  mcp_protocol_test.rs  mcp_tool_error_test.rs  payload_size_test.rs  response_wire_tests.rs  snapshot_tests.rs  tool_contracts.rs  tools_integration.rs  tools_read_integration.rs
crates/cm-cli/tests/common/: mod.rs
crates/cm-cli/tests/mcp_protocol/: basics.rs  examples.rs  export.rs  schema_conformance.rs  scope_migration.rs  tool_calls.rs  tools_list.rs
crates/cm-cli/tests/snapshots/: snapshot_tests__cx_browse.snap  snapshot_tests__cx_deposit.snap  snapshot_tests__cx_export.snap  snapshot_tests__cx_forget.snap  snapshot_tests__cx_get.snap  snapshot_tests__cx_recall.snap  snapshot_tests__cx_stats.snap  snapshot_tests__cx_store.snap  snapshot_tests__cx_update.snap
crates/cm-cli/tests/tools_integration/: deposit.rs  e2e.rs  export.rs  forget.rs  store.rs  update.rs
crates/cm-core/: Cargo.toml
crates/cm-core/src/: error.rs  lib.rs  query.rs  store.rs  types.rs
crates/cm-core/src/query/: builder.rs  builder_tests.rs  fts.rs  fts_tests.rs
crates/cm-core/src/types/: browse.rs  entry.rs  mutation.rs  relation.rs  scope.rs  scope_filter.rs  stats.rs
crates/cm-core/tests/: types_test.rs
crates/cm-store/: Cargo.toml
crates/cm-store/migrations/: 001_initial_schema.sql  002_fts5_setup.sql  003_triggers.sql  004_fts5_add_tags.sql  005_mutations.sql  006_recall_shadow.sql  007_rebuild_fts_unicode61.down.sql  007_rebuild_fts_unicode61.up.sql
crates/cm-store/src/: config.rs  dedup.rs  lib.rs  project.rs  schema.rs  sqlite.rs
crates/cm-store/src/sqlite/: aggregate.rs  cursor.rs  entry.rs  mod.rs  mutation.rs  parse.rs  predicates.rs  query.rs  scope.rs  search.rs  shadow.rs
crates/cm-store/tests/: sqlite_integration.rs  store_browse.rs  store_browse_sort.rs  store_entry.rs  store_lifecycle.rs  store_mutations.rs  store_query.rs  store_relations.rs  store_schema.rs  store_scope_query.rs  store_search.rs
crates/cm-store/tests/common/: mod.rs
crates/cm-web/: Cargo.toml  build.rs
crates/cm-web/frontend/: biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
crates/cm-web/frontend/src/: App.tsx  router.ts
crates/cm-web/src/: lib.rs  main.rs
crates/cm-web/src/api/: agent.rs  entries.rs  error.rs  export.rs  mod.rs  mutations.rs  recall_shadow.rs  scope_query.rs  stats.rs
crates/cm-web/tests/: frontend_recall_shadow_contract.rs  frontend_scope_contract.rs  parity.rs  public_api.rs  release_workflow.rs
crates/cm-web/tests/parity/: browse.rs  headers.rs  pagination.rs  recall.rs  recall_shadow.rs  scope_migration.rs  support.rs
(+111 files in other folders)
