[workspace]
resolver = "3"
members = [
    "crates/cm-core",
    "crates/cm-store",
    "crates/cm-capabilities",
    "crates/cm-cli",
    "crates/cm-web",
]

[workspace.package]
version = "0.1.12"
edition = "2024"
license = "MIT"
repository = "https://github.com/srobinson/context-matters"

[workspace.dependencies]
cm-capabilities = { path = "crates/cm-capabilities" }
cm-cli = { path = "crates/cm-cli" }
cm-core = { path = "crates/cm-core" }
cm-store = { path = "crates/cm-store" }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal", "time"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Identity
uuid = { version = "1.9", features = ["v7", "serde"] }
blake3 = "1"

# Encoding
base64 = "0.22"

# Type generation
ts-rs = { version = "12.0", features = ["chrono-impl", "uuid-impl", "serde-json-impl", "no-serde-warnings"] }

# Error handling
anyhow = "1"
thiserror = "2.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Testing
insta = { version = "1", features = ["json", "redactions"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
