[workspace]
resolver = "3"
members = [
    "crates/cm-core",
    "crates/cm-store",
    "crates/cm-capabilities",
    "crates/cm-cli",
    "crates/cm-web",
]

[workspace.package]
version = "0.2.15"
edition = "2024"
license = "MIT"
repository = "https://github.com/srobinson/context-matters"

[workspace.dependencies]
cm-capabilities = { path = "crates/cm-capabilities" }
cm-cli = { path = "crates/cm-cli" }
cm-core = { path = "crates/cm-core" }
cm-store = { path = "crates/cm-store" }
cm-web = { path = "crates/cm-web" }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "signal", "time"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
clap-markdown = "0.1"
color-print = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Identity
uuid = { version = "1.9", features = ["v7", "serde"] }
blake3 = "1"

# Encoding
base64 = "0.22"

# Type generation
ts-rs = { version = "12.0", features = ["chrono-impl", "uuid-impl", "serde-json-impl", "no-serde-warnings"] }

# Error handling
anyhow = "1"
thiserror = "2.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Testing
insta = { version = "1", features = ["json", "redactions"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

# The profile that 'dist' will build with. cargo-dist invokes
# `cargo build --profile dist`; without this block the build fails
# with "profile `dist` is not defined".
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
installers = ["shell", "powershell"]
github-attestations = true
# release-please creates the GitHub Release; cargo-dist only uploads into it.
create-release = false
unix-archive = ".tar.gz"
windows-archive = ".zip"
include = ["LICENSE", "README.md"]
auto-includes = false
pr-run-mode = "skip"
# release.yml appends a publish-npm job that cargo-dist does not know about;
# allow dist generate --check to tolerate that drift.
allow-dirty = ["ci"]
