[package]
name = "cm-capabilities"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared application capabilities for context-matters adapters"

[dependencies]
cm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
