[package]
name = "cm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Domain types and traits for the context-matters store"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
