[package]
name = "cm-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite persistence layer for context-matters"

[dependencies]
blake3 = { workspace = true }
cm-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
blake3 = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
