[package]
name = "cm-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web monitoring interface for context-matters"

[lib]
name = "cm_web"
path = "src/lib.rs"

[[bin]]
name = "cm-web"
path = "src/main.rs"

[dependencies]
cm-capabilities = { workspace = true }
cm-core = { workspace = true }
cm-store = { workspace = true }

chrono = { workspace = true }
axum = "0.8"
rust-embed = "8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
open = "5"
url = "2"

[dev-dependencies]
cm-cli = { workspace = true }
http-body-util = "0.1"
tempfile = "3"
tower = "0.5"
